# FauxFactory

./: README.md  pyproject.toml
config/: default.toml
docs/: Design.md
src/: main.py
src/flows/: flow.py  user_signup.py
src/model/: user.py
src/utils/: app_emulator.py  config.py  db.py  fakerwrapper.py  logging.py
tests/: test_sample.py
